--- a/views/infos.ejs
+++ b/views/infos.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,26 @@
     body {
       padding-top: 50px;
     }
-    th, td {
+
+    th,
+    td {
       vertical-align: middle;
+      width: fit-content;
     }
+    .theme {
+      width: 30%;
+      overflow: scroll;
+    }
+
+    .source {
+      width: 10%;
+      overflow: hidden;
+      font-size: small;
+    }
+
   </style>
 </head>
+
 <body>
   <div class="container">
     <h2 class="text-center mb-4">Kakao Open Chat Rooms</h2>
@@ -23,21 +39,31 @@
         <tr>
           <th scope="col">ID</th>
           <th scope="col">Kakao Link</th>
-          <th scope="col">Theme</th>
-          <th scope="col">Source Address</th>
+          <th scope="col" class="theme">Theme</th>
+          <th scope="col" class="source">Source Address</th>
           <th scope="col">Date Created</th>
         </tr>
       </thead>
       <tbody>
         <% infos.forEach(info=> { %>
           <tr>
-            <th scope="row"><%= info.id %></th>
-            <td><a href="<%= info.kakaoLink %>" target="_blank"><%= info.kakaoLink.replace('https://open.kakao.com', '') %></a></td>
-            <td><%= info.theme %></td>
-            <td><a href="<%= info.sourceAddress %>" target="_blank"><%= info.sourceAddress %></a></td>
-            <td><%= info.createdAt.toDateString() %></td>
+            <th scope="row">
+              <%= info.id %>
+            </th>
+            <td><a href="<%= info.kakaoLink %>" target="_blank">
+                <%= info.kakaoLink.replace('https://open.kakao.com', '' ) %>
+              </a></td>
+            <td class="theme">
+              <%= info.theme %>
+            </td>
+            <td class="source"><a href="<%= info.sourceAddress %>" target="_blank">
+                <%= info.sourceAddress.substring(0, 40) %>
+              </a></td>
+            <td>
+              <%= info.created %>
+            </td>
           </tr>
-        <% }) %>
+          <% }) %>
       </tbody>
     </table>
   </div>
@@ -45,4 +71,5 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
